--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
 # environment variables
 .env
 .env.production
@@ -18,6 +17,21 @@ pnpm-debug.log*
 # macOS-specific files
 .DS_Store
 
-# jetbrains setting folder
+# jetbrains and vscode setting folder
 .idea/
+.vscode
+
+# Deployment code
 /dist/
+
+# Not needed for deployment
+src/assets/fonts
+
+# package-lock
+package-lock.json
+
+# testing page jic
+src/pages/testing.astro
+
+# I'm not using typescript
+tsconfig.json
